Update Thmis integration
* Implement Themis mock server for testing
* Update Themis API client